--- a/src/server/chat/build.gradle
+++ b/src/server/chat/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'com.google.code.gson:gson:2.9.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
