build : add some dependencies
mongodb
kafka

--- a/src/server/chat/build.gradle
+++ b/src/server/chat/build.gradle
@@ -22,11 +22,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'com.google.code.gson:gson:2.9.0'
+	implementation 'org.springframework.kafka:spring-kafka'
+
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
-	implementation 'com.google.code.gson:gson:2.9.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
