feat: add navigation initial to main
[Feat]: add navigation initial to main

로그인하는 initial 화면에서 main 화면으로 넘어가 갈 수 있는 Navigation 기능 추가
Login Root 에서 Login Screen 와 SignUpScrenn 으로 넘어감
Navigation Action 을 통해서 인자 전달 복잡함 줄임

--- a/src/mobile/android/app/build.gradle
+++ b/src/mobile/android/app/build.gradle
@@ -48,6 +48,9 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    task wrapper(type: Wrapper) {
+        gradleVersion = '7.0'
+    }
 }
 
 dependencies {
@@ -100,3 +103,5 @@ dependencies {
     implementation "io.coil-kt:coil-compose:$coil_version"
 
 }
+
+tasks.register("prepareKotlinBuildScriptModel"){}
