--- a/src/mobile/android/app/src/main/AndroidManifest.xml
+++ b/src/mobile/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.PlopMessenger"
         tools:targetApi="32">
         <activity
-            android:name=".presentation.screen.main.MainActivity"
+            android:name=".presentation.screen.login.InitialActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PlopMessenger">
@@ -23,7 +23,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".presentation.screen.main.MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PlopMessenger">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
