[Android] Feature/screen navigation (#6)
[Feat]: add navigation initial to main
로그인하는 initial 화면에서 main 화면으로 넘어가 갈 수 있는 Navigation 기능 추가
Login Root 에서 Login Screen 와 SignUpScrenn 으로 넘어감
Navigation Action 을 통해서 인자 전달 복잡함 줄임

[Chore]: add resource
resource 추가

[Feat]: add bottom navigation bar
bottom navigation bar와 관련된 화면 추가

[Feat]: add navigation in main
로그인 화면을 제외한 화면간 전환 추가

--- a/src/mobile/android/app/build.gradle
+++ b/src/mobile/android/app/build.gradle
@@ -41,12 +41,15 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerExtensionVersion compose_ui_version
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
+    }
+    task wrapper(type: Wrapper) {
+        gradleVersion = '7.0'
     }
 }
 
@@ -100,3 +103,5 @@ dependencies {
     implementation "io.coil-kt:coil-compose:$coil_version"
 
 }
+
+tasks.register("prepareKotlinBuildScriptModel"){}
