fix: Modify validating jwt code
유효성 검사 간 secret key로 인해 refresh token 검증이 실패하는 오류 수정

--- a/src/server/gateway/src/main/resources/application.yml
+++ b/src/server/gateway/src/main/resources/application.yml
@@ -54,7 +54,6 @@ spring:
 token:
   # 1분
   access_expired_time: 60000
-  access_secret: plip
+  secret_key: plip
   # 1시간
   refresh_expired_time: 3600000
-  refresh_secret: plop
