--- a/src/server/chat/build.gradle
+++ b/src/server/chat/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'com.google.code.gson:gson:2.9.0'
 	implementation 'org.springframework.kafka:spring-kafka'
-
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
