feat: Add 채팅방 목록에서 방생성 정보받기
그룹채팅방 생성시 생성정보 소켓통신
/chatting/topic/new-room/{userId}에 구독한 구독자들에게 모두 전달

--- a/src/server/chat/src/main/resources/application.yml
+++ b/src/server/chat/src/main/resources/application.yml
@@ -12,13 +12,16 @@ spring:
     bootstrap-servers: localhost:9092
     consumer:
       group-id: plop
+    room:
+      group-id: room
 kafka:
   topic:
     name: dm-message
+    room-name: chat-room
 
 token:
   # 1분
-  access_expired_time: 600000
+  access_expired_time: 6000000
   secret_key: plip
   # 1시간
   refresh_expired_time: 3600000
