feat: Add sending verification code through email
이메일을 통한 인증 코드 전송 구현, 아이디 찾기/ 비밀번호 찾기/ 이메일 인증에서 활용

--- a/src/server/auth/src/main/resources/application.yml
+++ b/src/server/auth/src/main/resources/application.yml
@@ -15,6 +15,19 @@ spring:
     host: 127.0.0.1
     port: 6379
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: jhl81094@gmail.com
+    password: nrlawlbsermlieze
+    properties:
+      mail:
+        debug: true
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 eureka:
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
