--- a/src/server/auth/build.gradle
+++ b/src/server/auth/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation group : 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.1.1'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.8'
 }
 
 dependencyManagement {
