[Backend] Feture/history (#19)
* build: Add dependence

jjwt

* chore: Add @RequestMapping

* feat: Add jwt parsing code

* feat: Add classes about jwt

jwt 파싱관련 클래스들
JwtTokenProvider
JwtUser
UserDto

* feat: Add classes about Exception

예외처리관련 클래스들
ErrorCode
ErrorResponseDto
GlobalExceptionHandler
JwtTokenIncorrectStructureException

* chore: jwt setting

* feat: Add 채팅방 목록에서 방생성 정보받기

그룹채팅방 생성시 생성정보 소켓통신
/chatting/topic/new-room/{userId}에 구독한 구독자들에게 모두 전달

* feat: Add allMessagesAtRoom method

* feat: Add allMessagesAtRoom method

* refactor: Add and use convertEntityToDto method

* refactor: 카프카 토픽, 그룹명칭 수정

* refactor: Add and use getTokenToUserId(jwt)

* feat: Add getLastMessage

내 채팅방 리스트 조회
ChatMessageRepositoryImpl
ChatMongoTemplateRepository
ChatRoomController

* feat: Add findMyRoomsByUserId

내 채팅방 리스트 조회

* chore: 자잘한 수정

* feat: 사용자 정의 예외처리 구현

Add CustomAPIException class
Add error code at ErrorCode
Add handleCustomAPIException method at GlobalExceptionHandler class

* feat: implement Chat Messages Pagination

Add ChatMessagePagination at ChatMessageController
Add findByRoomIdWithPagingAndFiltering at ChatMessageRepositoryImpl
Add chatMessagePagination at ChatMessageService
Add findByRoomIdWithPagingAndFiltering at ChatMongoTemplateRepository

--- a/src/server/chat/src/main/resources/application.yml
+++ b/src/server/chat/src/main/resources/application.yml
@@ -10,8 +10,18 @@ spring:
       # uri : mongodb: //localhost:27017/plop
   kafka:
     bootstrap-servers: localhost:9092
-    consumer:
-      group-id: plop
+    chat-consumer:
+      group-id: chat-group
+    room-consumer:
+      group-id: room-group
 kafka:
   topic:
-    name: dm-message
+    chat-name: message
+    room-name: room
+
+token:
+  # 1분
+  access_expired_time: 6000000
+  secret_key: plip
+  # 1시간
+  refresh_expired_time: 3600000
