feat: Add changing password
비밀번호 찾기 요청 시 패스워드 변경 요청 구현
gateway에서 jwt를 검증하지 않음
유저 state를 1로 변경
탈퇴 회원의 경우 exception 발생

--- a/src/server/gateway/src/main/resources/application.yml
+++ b/src/server/gateway/src/main/resources/application.yml
@@ -16,22 +16,12 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: user-service
-          uri: lb://USER-SERVICE
-          predicates:
-            - Path=/user/v1/**
-          filters:
-#            - AuthenticationFilter
-            - AuthorizationHeaderFilter
-            - RewritePath=/user/v1/(?<segment>.*), /$\{segment}
-
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
             - Path=/auth/v1/login
           filters:
             - RewritePath=/auth/v1/(?<segment>.*), /$\{segment}
-
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
@@ -41,11 +31,38 @@ spring:
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
+            - Path=/auth/v1/email/code
+          filters:
+            - RewritePath=/auth/v1/(?<segment>.*), /$\{segment}
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path=/auth/v1/email/verify
+          filters:
+            - RewritePath=/auth/v1/(?<segment>.*), /$\{segment}
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path=/auth/v1/password/new
+          filters:
+            - RewritePath=/auth/v1/(?<segment>.*), /$\{segment}
+
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user/v1/**
+          filters:
+            - AuthorizationHeaderFilter
+            - RewritePath=/user/v1/(?<segment>.*), /$\{segment}
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          predicates:
             - Path=/auth/v1/**
           filters:
-#            - AuthenticationFilter
             - AuthorizationHeaderFilter
             - RewritePath=/auth/v1/(?<segment>.*), /$\{segment}
+
+
 
 
 #jwt :
