--- a/src/server/chat/src/main/resources/application.yml
+++ b/src/server/chat/src/main/resources/application.yml
@@ -2,26 +2,5 @@ server:
   port: 8080
 
 spring:
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: plop
-      # uri : mongodb: //localhost:27017/plop
-  kafka:
-    bootstrap-servers: localhost:9092
-    chat-consumer:
-      group-id: chat-group
-    room-consumer:
-      group-id: room-group
-kafka:
-  topic:
-    chat-name: message
-    room-name: room
-
-token:
-  # 1분
-  access_expired_time: 6000000
-  secret_key: plip
-  # 1시간
-  refresh_expired_time: 3600000
+  profiles:
+    default: prod
