fix: Change access token expiration time
토큰을 활용한 테스트를 위해 시간 연장
access token :  1분 -> 1시간

--- a/src/server/gateway/src/main/resources/application.yml
+++ b/src/server/gateway/src/main/resources/application.yml
@@ -69,8 +69,8 @@ spring:
 #  secret: plop
 #  validity: 1
 token:
-  # 1분
-  access_expired_time: 60000
+  # 1시간
+  access_expired_time: 3600000
   secret_key: plip
   # 1시간
   refresh_expired_time: 3600000
