--- a/src/server/auth/src/main/resources/application.yml
+++ b/src/server/auth/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     name: auth-service
   jpa:
     show-sql: true
+#    hibernate:
+#      ddl-auto: create-drop
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/plop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
@@ -39,8 +41,8 @@ eureka:
       defaultZone: http://127.0.0.1:8761/eureka
 
 token:
-  # 1분
-  access_expired_time: 60000
+  # 1시간 개발 편의성을 위해 1분 -> 1시간
+  access_expired_time: 3600000
   secret_key: plip
   # 1시간
   refresh_expired_time: 3600000
