--- a/src/server/presence/build.gradle
+++ b/src/server/presence/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -40,11 +41,6 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
-	}
-}
 
 dependencyManagement {
 	imports {
