design: modify status bar color
[Design]: modify status bar color

--- a/src/mobile/android/build.gradle
+++ b/src/mobile/android/build.gradle
@@ -28,6 +28,9 @@ buildscript {
 
         //coil
         coil_version = "2.2.2"
+
+        //accompanist
+        accompanist_version = "0.28.0"
     }
 
     repositories {
