--- a/src/server/chat/build.gradle
+++ b/src/server/chat/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'com.google.code.gson:gson:2.9.0'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
