--- a/src/server/auth/src/main/resources/application.yml
+++ b/src/server/auth/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/plop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
     username: plop_admin
-    password: jeho
+    password: password
   redis:
     host: 127.0.0.1
     port: 6379
