--- a/src/server/user/src/main/resources/application.yml
+++ b/src/server/user/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/plop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
     username: plop_admin
-    password: jeho
+    password: password
   redis:
     host: 127.0.0.1
     port: 6379
@@ -29,10 +29,10 @@ eureka:
       defaultZone: http://127.0.0.1:8761/eureka
 
 token:
-  # 1?? ?? ???? ?? 1? -> 1??
+  # 1시간 개발 편의성을 위해 1분 -> 1시간
   access_expired_time: 3600000
   secret_key: plip
-  # 1??
+  # 1시간
   refresh_expired_time: 3600000
 
 logging:
