feat: setting fcm
[feat]: setting FCM

--- a/src/mobile/android/app/build.gradle
+++ b/src/mobile/android/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -102,6 +103,10 @@ dependencies {
 
     // Coil - Image Loading
     implementation "io.coil-kt:coil-compose:$coil_version"
+
+    //FCM
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.firebase:firebase-messaging-ktx'
 
 }
 
