--- a/src/server/presence/src/main/resources/application.yml
+++ b/src/server/presence/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: presence-service
   profiles:
-    default: dev
+    default: prod
   kafka:
     consumer:
       group-id: presence-group
