fix: modify register / send notification logic
토큰 등록 / 푸시 알림 전송 로직 수정

--- a/src/server/gateway/src/main/resources/application.yml
+++ b/src/server/gateway/src/main/resources/application.yml
@@ -65,14 +65,14 @@ spring:
           predicates:
             - Path=/push/v1/send
           filters:
-            - RewritePath=/auth/v1/(?<segment>.*), /$\{segment}
+            - RewritePath=/push/v1/(?<segment>.*), /$\{segment}
         - id: push-service
           uri: lb://PUSH-SERVICE
           predicates:
             - Path=/push/v1/**
           filters:
             - AuthorizationHeaderFilter
-            - RewritePath=/auth/v1/(?<segment>.*), /$\{segment}
+            - RewritePath=/push/v1/(?<segment>.*), /$\{segment}
 
         - id: presence-service
           uri: lb://PRESENCE-SERVICE
