--- a/src/server/push/build.gradle
+++ b/src/server/push/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.google.firebase:firebase-admin:6.8.1'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.1.1'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 dependencyManagement {
