--- a/src/server/push/src/main/resources/application.yml
+++ b/src/server/push/src/main/resources/application.yml
@@ -6,7 +6,15 @@ server:
 spring:
   application:
     name: push-service
-
+  jpa:
+    show-sql: true
+  #    hibernate:
+  #      ddl-auto: create-drop
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://plop-rds.cyjccp4psnuz.ap-northeast-2.rds.amazonaws.com:3306/plop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+    username: plop_admin
+    password: password
 eureka:
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
@@ -21,6 +29,11 @@ fcm:
     path: plop-df864-firebase-adminsdk-5aitx-a4a75b121d.json
     scope: https://www.googleapis.com/auth/cloud-platform
 
-
+token:
+  # 1시간 개발 편의성을 위해 1분 -> 1시간
+  access_expired_time: 3600000
+  secret_key: plip
+  # 1시간
+  refresh_expired_time: 3600000
 
 
