feat: Add profile upload function 프로필 사진 업로드 기능 추가

--- a/src/server/user/src/main/resources/application.yml
+++ b/src/server/user/src/main/resources/application.yml
@@ -39,6 +39,16 @@ logging:
   level:
     smilegate.plop.auth: DEBUG
 
-
+cloud:
+  aws:
+    region:
+      static: ap-northeast-2
+    s3:
+      bucket: plop-s3
+    credentials:
+      accessKey: AKIARBBIBVZBDFUP4J5I
+      secretKey: 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
+    stack:
+      auto: false
 
 
