--- a/src/server/auth/src/main/resources/application.yml
+++ b/src/server/auth/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://plop-rds.cyjccp4psnuz.ap-northeast-2.rds.amazonaws.com:3306/plop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
-    username: plop_admin
-    password: password
+    username: ${PLOP_DB_USER} # plop-db-user
+    password: ${PLOP_DB_PWD} #plop-db-pwd
   redis:
     host: 127.0.0.1
     port: 6379
@@ -20,8 +20,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: jhl81094@gmail.com
-    password: nrlawlbsermlieze
+    username: ${MAIL_USER}
+    password: ${MAIL_PWD}
     properties:
       mail:
         debug: true
