--- a/src/server/user/src/main/resources/application.yml
+++ b/src/server/user/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://plop-rds.cyjccp4psnuz.ap-northeast-2.rds.amazonaws.com:3306/plop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
-    username: plop_admin
-    password: password
+    username: ${PLOP_DB_USER}
+    password: ${PLOP_DB_PWD}
   redis:
     host: 127.0.0.1
     port: 6379
@@ -46,8 +46,8 @@ cloud:
     s3:
       bucket: plop-s3
     credentials:
-      accessKey: AKIARBBIBVZBDFUP4J5I
-      secretKey: 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
+      accessKey: ${ACCESS_KEY}
+      secretKey: ${SECRET_KEY}
     stack:
       auto: false
 
