feat: 채팅서버 모니터링

--- a/src/server/chat/src/main/resources/application.yml
+++ b/src/server/chat/src/main/resources/application.yml
@@ -33,3 +33,16 @@ springdoc:
     doc-expansion: none
   paths-to-match:
     - /chatting/**
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - info
+          - health
+          - loggers
+          - mappings
+          - metrics
+          - shutdown
+          - prometheus
