--- a/src/mobile/android/app/src/main/AndroidManifest.xml
+++ b/src/mobile/android/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_app_logo" />
     </application>
 
 </manifest>
