--- a/src/server/user/src/main/resources/application.yml
+++ b/src/server/user/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
     url: jdbc:mysql://plop-rds.cyjccp4psnuz.ap-northeast-2.rds.amazonaws.com:3306/plop?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
     username: ${PLOP_DB_USER}
     password: ${PLOP_DB_PWD}
+    hikari:
+      maximum-pool-size: 20
   redis:
     host: 127.0.0.1
     port: 6379
