--- a/src/mobile/ios/plop-messenger-ios/plop-messenger-ios/Info.plist
+++ b/src/mobile/ios/plop-messenger-ios/plop-messenger-ios/Info.plist
@@ -20,6 +20,8 @@
 		</dict>
 	</dict>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
